<?xml version="1.0"?>
<package format="2">
  <name>yolo_bringup</name>
  <version>4.1.0</version>
  <description>YOLO for ROS 1</description>
  <maintainer email="mgons@unileon.es">Miguel Ángel González Santamarta</maintainer>
  <license>GPL-3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>yolo_ros</depend>

</package>
